# vim:set noet ts=4:
#
# input-pad - The input pad
#
# Copyright (c) 2025 Takao Fujiwara <takao.fujiwara1@gmail.com>
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
# MA  02110-1301  USA

EXTRA_DIST = \
    input-pad.m4 \
    $(NULL)

GITIGNOREFILES = \
    gtk-doc.m4 \
    intltool.m4 \
    libtool.m4 \
    lt*.m4 \
    $(NULL)
